welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: illegal start of simple expression
  else if()
          ^Diagonal:21: error: ')' expected but '}' found.
} 
^